<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>shellymutu-grigg</groupId>
  <artifactId>Selenium_WebDriver_with_Java_DEMO</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>Selenium_WebDriver_with_Java_DEMO</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.amazon.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <maven.compiler.source>17</maven.compiler.source>
	    <maven.compiler.target>17</maven.compiler.target>
  	</properties>

	<dependencies>
	    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-java</artifactId>
		    <version>4.11.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
		    <groupId>org.testng</groupId>
		    <artifactId>testng</artifactId>
		    <version>7.8.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
		    <groupId>io.github.bonigarcia</groupId>
		    <artifactId>webdrivermanager</artifactId>
		    <version>5.4.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->	
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>2.0.7</version>
		</dependency>
	
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->	
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>2.0.7</version>
		</dependency>

		<dependency>
		    <groupId>io.github.cdimascio</groupId>
		    <artifactId>dotenv-java</artifactId>
		    <version>3.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
		    <groupId>com.aventstack</groupId>
		    <artifactId>extentreports</artifactId>
		    <version>5.1.0</version>
		</dependency>
	</dependencies>
	
	<!-- Maven command to run each profile: "mvn test -P<profile-id e.g. Regression> -e" -->
  <profiles>
	  <profile>
		  <id>Smoke</id>
		  <build>
			  <pluginManagement>
				  <plugins>
					  <plugin>
						  <groupId>org.apache.maven.plugins</groupId>
						  <artifactId>maven-surefire-plugin</artifactId>
						  <version>2.22.1</version>
						  <configuration>
							  <suiteXmlFiles>
								  <suiteXmlFile>src/test/resources/smoke.xml</suiteXmlFile>
								</suiteXmlFiles>
						  </configuration>
					  </plugin>
				  </plugins>
			  </pluginManagement>
		  </build>
	  </profile>
	  <profile>
		  <id>E2E</id>
		  <build>
			  <pluginManagement>
				  <plugins>
					  <plugin>
						  <groupId>org.apache.maven.plugins</groupId>
						  <artifactId>maven-surefire-plugin</artifactId>
						  <version>2.22.1</version>
						  <configuration>
							  <suiteXmlFiles>
								  <suiteXmlFile>src/test/resources/e2e.xml</suiteXmlFile>
							  </suiteXmlFiles>
						  </configuration>
					  </plugin>
				  </plugins>
			  </pluginManagement>
		  </build>
	  </profile>
	  <profile>
		  <id>ErrorHandling</id>
		  <build>
			  <pluginManagement>
				  <plugins>
					  <plugin>
						  <groupId>org.apache.maven.plugins</groupId>
						  <artifactId>maven-surefire-plugin</artifactId>
						  <version>2.22.1</version>
						  <configuration>
							  <suiteXmlFiles>
								  <suiteXmlFile>src/test/resources/errors.xml</suiteXmlFile>
							  </suiteXmlFiles>
						  </configuration>
					  </plugin>
			      </plugins>
			  </pluginManagement>
		  </build>
	  </profile>
	  <profile>
		  <id>Login</id>
		  <build>
			  <pluginManagement>
				  <plugins>
					  <plugin>
						  <groupId>org.apache.maven.plugins</groupId>
						  <artifactId>maven-surefire-plugin</artifactId>
						  <version>2.22.1</version>
						  <configuration>
							  <suiteXmlFiles>
								  <suiteXmlFile>src/test/resources/loginSuccess.xml</suiteXmlFile>
					          </suiteXmlFiles>
						  </configuration>
					  </plugin>
			      </plugins>
			  </pluginManagement>
		  </build>
	  </profile>
	  <profile>
		  <id>Grid</id>
		  <build>
			  <pluginManagement>
				  <plugins>
					  <plugin>
						  <groupId>org.apache.maven.plugins</groupId>
						  <artifactId>maven-surefire-plugin</artifactId>
						  <version>2.22.1</version>
						  <configuration>
							  <suiteXmlFiles>
								  <suiteXmlFile>src/test/resources/grid.xml</suiteXmlFile>
							  </suiteXmlFiles>
						  </configuration>
					  </plugin>
				  </plugins>
			  </pluginManagement>
		  </build>
	  </profile>
  </profiles>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
			<groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>3.11.0</version>
	        <configuration>
		        <fork>true</fork>
		        <compilerArgs>
		            <arg>-Xlint:all</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
		        </compilerArgs>
		        <!--for unmappable characters in classes-->
		        <encoding>UTF-8</encoding>
		        <showDeprecation>true</showDeprecation>
		        <showWarnings>true</showWarnings>
		        <!--for lombok annotations to resolve-->
		        <!--contradictory to maven, intelliJ fails with this-->
		        <annotationProcessorPaths>
		            <path>
		                <groupId>org.projectlombok</groupId>
		                <artifactId>lombok</artifactId>
		                <version>1.18.16</version>
		            </path>
		        </annotationProcessorPaths>
		    </configuration>
        </plugin>
        <plugin>
			<groupId>org.apache.maven.plugins</groupId>
          	<artifactId>maven-surefire-plugin</artifactId>
          	<version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
